[package]
name = "reverse_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "reverse_proxy"
path = "src/reverse_proxy.rs"
rustflags = ["-C", "target-feature=+crt-static"]

[[bin]]
name = "hello_service"
path = "src/hello_service.rs"
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies]
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["server", "full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
serde = "1.0.196"
serde_json = "1.0.113"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"] }
